recommendation/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-v1
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8083"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: recommendation
        image: hiprabhat/ecommerce-recommendation:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8083
