recommendation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  namespace: ecommerce
  labels:
    app: recommendation
spec:
  selector:
    app: recommendation
  ports:
  - port: 80
    targetPort: 8083
    name: http-recommendation
