recommendation/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: ecommerce
  labels:
    app: recommendation
spec:
  hosts:
    - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 10
    - destination:
        host: recommendation
        subset: v2
      weight: 90
