recommendation/nginx-ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ingress-recommendation
    namespace: ecommerce
  spec:
    rules:
      - host: recommendation.nginx.prabhatsharma.com
        http:
          paths:
            - backend:
                serviceName: recommendation
                servicePort: 80
              path: /
